--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
-h1{
-  &:hover{
-    color: orangered;
+.uk-container{
+  h1, h2{
+    text-align: center;
   }
 }
 body {
@@ -11,16 +11,40 @@ body {
 }
 
 .uk-card-header, .uk-card-body {
-  min-height: 6.9rem;
+  min-height: 11.9rem;
   text-align: center;
 }
 
 .uk-card-body{
+  min-height: 20rem;
+}
+
+.uk-card-header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.uk-card-body{
   color: black;
+  p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    a {
+      font-size: 1rem;
+      color: white;
+      margin-left: 1rem;
+    }
+  }
 }
 
 .uk-card-footer {
   text-align: center;
+  a{
+    font-size: 1.5rem;
+  }
 }
 
 h2{
@@ -32,10 +56,21 @@ h2{
   }
 }
 
-.yes{
+.yes, .no{
   background: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .no{
   background: orangered;
+}
+
+.comments_body{
+  min-height: 38rem;
+}
+
+.photo_body, .albums_body{
+  min-height: 6rem;
 }
